exports[`prefer-global-number-constants > invalid(1): const foo = Number.NaN; 1`] = `

  1 | const foo = Number.NaN;

`;

exports[`prefer-global-number-constants > invalid(1): const foo = Number.NaN; 2`] = `

Message:
> 1 | const foo = Number.NaN;
    |             ^^^^^^^^^^ Prefer \`NaN\` over \`Number.NaN\`.

Output:
  1 | const foo = NaN;

`;

exports[`prefer-global-number-constants > invalid(2): const foo = window.Number.NaN; 1`] = `

  1 | const foo = window.Number.NaN;

`;

exports[`prefer-global-number-constants > invalid(2): const foo = window.Number.NaN; 2`] = `

Message:
> 1 | const foo = window.Number.NaN;
    |             ^^^^^^^^^^^^^^^^^ Prefer \`NaN\` over \`Number.NaN\`.

Output:
  1 | const foo = NaN;

`;

exports[`prefer-global-number-constants > invalid(3): const foo = Number[\"NaN\"]; 1`] = `

  1 | const foo = Number["NaN"];

`;

exports[`prefer-global-number-constants > invalid(3): const foo = Number[\"NaN\"]; 2`] = `

Message:
> 1 | const foo = Number["NaN"];
    |             ^^^^^^^^^^^^^ Prefer \`NaN\` over \`Number.NaN\`.

Output:
  1 | const foo = NaN;

`;

exports[`prefer-global-number-constants > invalid(4): const foo = Number.POSITIVE_INFINITY; 1`] = `

  1 | const foo = Number.POSITIVE_INFINITY;

`;

exports[`prefer-global-number-constants > invalid(4): const foo = Number.POSITIVE_INFINITY; 2`] = `

Message:
> 1 | const foo = Number.POSITIVE_INFINITY;
    |             ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Infinity\` over \`Number.POSITIVE_INFINITY\`.

Output:
  1 | const foo = Infinity;

`;

exports[`prefer-global-number-constants > invalid(5): const foo = Number.NEGATIVE_INFINITY; 1`] = `

  1 | const foo = Number.NEGATIVE_INFINITY;

`;

exports[`prefer-global-number-constants > invalid(5): const foo = Number.NEGATIVE_INFINITY; 2`] = `

Message:
> 1 | const foo = Number.NEGATIVE_INFINITY;
    |             ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`-Infinity\` over \`Number.NEGATIVE_INFINITY\`.

`;

exports[`prefer-global-number-constants > invalid(6): const foo = Number.NEGATIVE_INFINITY.toString(); 1`] = `

  1 | const foo = Number.NEGATIVE_INFINITY.toString();

`;

exports[`prefer-global-number-constants > invalid(6): const foo = Number.NEGATIVE_INFINITY.toString(); 2`] = `

Message:
> 1 | const foo = Number.NEGATIVE_INFINITY.toString();
    |             ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`-Infinity\` over \`Number.NEGATIVE_INFINITY\`.

`;

exports[`prefer-global-number-constants > invalid(7): const foo = {value: Number.NaN}; 1`] = `

  1 | const foo = {value: Number.NaN};

`;

exports[`prefer-global-number-constants > invalid(7): const foo = {value: Number.NaN}; 2`] = `

Message:
> 1 | const foo = {value: Number.NaN};
    |                     ^^^^^^^^^^ Prefer \`NaN\` over \`Number.NaN\`.

Output:
  1 | const foo = {value: NaN};

`;

exports[`prefer-global-number-constants > invalid(8): const foo = {[Number.POSITIVE_INFINITY]: Number.NEGATIVE_INFINITY}; 1`] = `

  1 | const foo = {[Number.POSITIVE_INFINITY]: Number.NEGATIVE_INFINITY};

`;

exports[`prefer-global-number-constants > invalid(8): const foo = {[Number.POSITIVE_INFINITY]: Number.NEGATIVE_INFINITY}; 2`] = `

Message:
> 1 | const foo = {[Number.POSITIVE_INFINITY]: Number.NEGATIVE_INFINITY};
    |               ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Infinity\` over \`Number.POSITIVE_INFINITY\`.

Output:
  1 | const foo = {[Infinity]: Number.NEGATIVE_INFINITY};

`;

exports[`prefer-global-number-constants > invalid(8): const foo = {[Number.POSITIVE_INFINITY]: Number.NEGATIVE_INFINITY}; 3`] = `

Message:
> 1 | const foo = {[Number.POSITIVE_INFINITY]: Number.NEGATIVE_INFINITY};
    |                                          ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`-Infinity\` over \`Number.NEGATIVE_INFINITY\`.

`;

exports[`prefer-global-number-constants > invalid(9): const foo = Number /* comment */ .NaN; 1`] = `

  1 | const foo = Number /* comment */ .NaN;

`;

exports[`prefer-global-number-constants > invalid(9): const foo = Number /* comment */ .NaN; 2`] = `

Message:
> 1 | const foo = Number /* comment */ .NaN;
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`NaN\` over \`Number.NaN\`.

`;
